# connect-e-samples

./: .gitignore  README.md
dotnet/: Paymentsense.Connect-e.sln  README.md
dotnet/Paymentsense.Connect-e.Api/: CardPaymentsService.cs  Dockerfile  ICardPaymentsService.cs  Paymentsense.Connect-e.Api.csproj  Program.cs  appsettings.json
dotnet/Paymentsense.Connect-e.Api/Controllers/: CardPaymentsController.cs
dotnet/Paymentsense.Connect-e.Api/Models/: Address.cs  BillingAddress.cs  CardPaymentsOptions.cs  CrossReferencePaymentRequest.cs  CrossReferencePaymentResponse.cs  PaymentResponse.cs  PaymentTokenRequest.cs  (+2 more)
dotnet/angular/: README.md  package.json  tslint.json
go/: .gitignore  Dockerfile  README.md  go.mod  go.sum
go/angular/: angular.json  package-lock.json  package.json
go/assets/: apple-developer-merchantid-domain-association
java/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml
nodejs/: .editorconfig  .env  .eslintrc.js  .gitignore  .prettierrc.js  Dockerfile  Makefile  README.md  docker-compose.yml  index.js  jsconfig.json  package.json
nodejs/src/: access-token.js  envs.js  index.js  payments.js  server.js
nodejs/web/: connect-e.js  index.html
php/: .env.example  .php-cs-fixer.dist.php  Dockerfile  Makefile  README.md  artisan  composer.json  docker-compose.yml
php/bootstrap/: app.php
php/routes/: web.php
php/tests/: WebTest.php
rust/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
rust/src/: endpoint.rs  main.rs  payment_info.rs  payment_token.rs  service.rs
rust/static/: index.html
(+82 files in other folders)
