[package]
name = "connect-e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
awc = { version="3.1.1", features=["rustls"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
rustls = "0.20.8"
url-escape = "0.1.1"
mime = "0.3.17"
